2015-02-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_shape_attr_data_copy),
	(gst_ttmlrender_shape_attr_data_free),
	(gst_ttmlrender_build_layouts), (gst_ttmlrender_show_layout),
	(gst_ttmlrender_show_regions), (gst_ttmlrender_class_init),
	(gst_ttmlrender_init):
	* src/gstttmlstyle.c: (gst_ttml_style_translate_generic_font_name),
	(gst_ttml_style_gen_pango_markup):
	Add support for Anamorphic font scaling (different X and Y scale).
	Some font leaks are detected, but they are all traced back to
	FontConfig, which is known to leak.
	Make the default font family something that Pango understands,
	so it does not complain when no family is specified and the new
	anamorphic font scaling is present.

2015-02-17  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
	* src/gstttmlenums.h:
	* src/gstttmlrender.c:
	(gst_ttmlrender_pango_attr_invisibility_new),
	(gst_ttmlrender_build_layouts), (gst_ttmlrender_show_layout),
	(gst_ttmlrender_init):
	* src/gstttmlutils.c:
	Add support for the Visibility attribute.

2015-02-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_pango_attr_int_new),
	(gst_ttmlrender_pango_attr_int_copy),
	(gst_ttmlrender_pango_attr_int_destroy),
	(gst_ttmlrender_pango_attr_int_equal),
	(gst_ttmlrender_pango_attr_overline_new),
	(gst_ttmlrender_store_layout), (gst_ttmlrender_build_layouts),
	(gst_ttmlrender_show_layout), (gst_ttmlrender_free_region),
	(gst_ttmlrender_init):
	Add support for the Overline TextDecoration attribute.

2015-02-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_layout):
	Draw glyphs one at a time instead of letting Pango draw whole lines.
	This will allow us to introduce custom attributes and draw them in
	whatever way we want, so we can implement things not supported by
	Pango (like Overline, Invisibility, etc)

2015-02-12  Xavi Artigas  <xartigas@fluendo.com>
